<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button android:id="@+id/fragment_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
            android:onClick="onAutoTraceBtnClick"
            android:text="@string/auto_trace_fg"
            android:textSize="16sp"
            android:background="@drawable/shape_corner_rectangle"
            android:textAllCaps="false" />
        
		<Button android:id="@+id/scroll_view_v_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
            android:onClick="onAutoTraceBtnClick"
            android:text="@string/auto_trace_sv_v"
            android:textSize="16sp"
            android:background="@drawable/shape_corner_rectangle"
            android:textAllCaps="false" />

        <Button android:id="@+id/scroll_view_h_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
            android:onClick="onAutoTraceBtnClick"
            android:text="@string/auto_trace_sv_h"
            android:textSize="16sp"
            android:background="@drawable/shape_corner_rectangle"
            android:textAllCaps="false" />
        
        <Button android:id="@+id/list_view_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
            android:onClick="onAutoTraceBtnClick"
            android:text="@string/auto_trace_lv"
            android:textSize="16sp"
            android:background="@drawable/shape_corner_rectangle"
            android:textAllCaps="false" />
        
        <Button android:id="@+id/recycler_view_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
            android:onClick="onAutoTraceBtnClick"
            android:text="@string/auto_trace_rv"
            android:textSize="16sp"
            android:background="@drawable/shape_corner_rectangle"
            android:textAllCaps="false" />
        
        <Button android:id="@+id/view_pager_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
            android:onClick="onAutoTraceBtnClick"
            android:text="@string/auto_trace_vp"
            android:textSize="16sp"
            android:background="@drawable/shape_corner_rectangle"
            android:textAllCaps="false" />
        
        <Button android:id="@+id/tab_host_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
            android:onClick="onAutoTraceBtnClick"
            android:text="@string/auto_trace_tab_host"
            android:textSize="16sp"
            android:background="@drawable/shape_corner_rectangle"
            android:textAllCaps="false" />
        
        <Button android:id="@+id/web_view_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
	        android:layout_marginLeft="30dp"
	        android:layout_marginRight="30dp"
            android:onClick="onAutoTraceBtnClick"
            android:text="@string/auto_trace_web_view"
            android:textSize="16sp"
            android:background="@drawable/shape_corner_rectangle"
            android:textAllCaps="false" />
    </LinearLayout>

</ScrollView>

