<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:orientation="horizontal">
    
    <ImageView
        android:id="@+id/img"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_launcher"/>
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="15dp"
	    android:gravity="center_vertical"
	    android:orientation="vertical">
	    
        <TextView android:id="@+id/type_tv"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/king_bed_room"
	        android:textSize="16sp" />
        <RelativeLayout 
            android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="5dp">
            <TextView android:id="@+id/price_tv"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentBottom="true"
		        android:text="@string/price"
		        android:textColor="#FF0000"
		        android:textSize="14sp" />
		    <Button android:id="@+id/book_btn"
		        android:layout_width="wrap_content"
		        android:layout_height="35dp"
		        android:layout_alignParentEnd="true"
		        android:textSize="14sp"
		        android:text="@string/book"
		        android:background="@drawable/shape_corner_rectangle" />
        </RelativeLayout>
	</LinearLayout>
</LinearLayout>